<resources>
    <string name="app_name">MyApp</string>
    <string name="second">Second Screen</string>
    <string name="primera">First Screen</string>
    <string name="btnChange">Change!</string>
    <string name="btnInternal">Save Internal</string>
    <string name="btnExternal">Save External</string>
    <string name="btnShared">Shared Prefs</string>
    <string name="btnReadShared">RShared</string>
    <string name="btnRInternal">RInternal</string>
    <string name="btnRExternal">RExternal</string>
    <string name="channel_name">COMOV CHANNEL</string>
    <string name="channel_description">COMOV notification channel</string>
    <string name="channel_id">COMOV</string>
    <string name="schedule">JobSchedule</string>
    <string name="btnPic">Pic</string>
    <string name="btnVid">Vid</string>
    <string name="btnStopService">Stop Service</string>
    <string name="btnStartService">Start Service</string>
    <string name="btnAddress">Locate!</string>
    <string name="enableGPS">GPS update</string>
    <string name="btnMap">Map!</string>
    <string name="title_activity_maps">Map</string>
    <string name="btnLocation">Go Location</string>
    <string name="btnAPI2">API TEST</string>
    <string name="btnAPI1">Go API</string>
    <string name="btnAPI3">One post</string>
    <string name="btnAPI4">New Post</string>
    <string name="btnTable">Go table</string>
    <string name="btnAdd">Add</string>
    <string name="btnRemove">Remove</string>
</resources>
